src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Financial</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Paid</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Refund</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AVSFQB__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Generate_Object__c</fullName>
        <description>Request to generate Estimate, invoice or sales order</description>
        <label>Generate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>SalesOrder</fullName>
                </value>
                <value>
                    <fullName>SalesReceipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBSync</fullName>
                </value>
                <value>
                    <fullName>AppMashup (Salesforce.com &amp; QuickBooks)</fullName>
                </value>
                <value>
                    <fullName>AssessRight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Products_Count__c</fullName>
        <description>Roll up Count of Opportunity Products for an opportunity</description>
        <label>Products Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_ItemType__c</fullName>
        <label>QuickBooks ItemType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ItemService</fullName>
                </value>
                <value>
                    <fullName>ItemNonInventory</fullName>
                </value>
                <value>
                    <fullName>ItemOtherCharge</fullName>
                </value>
                <value>
                    <fullName>ItemInventory</fullName>
                </value>
                <value>
                    <fullName>ItemInventoryAssembly</fullName>
                </value>
                <value>
                    <fullName>ItemFixedAsset</fullName>
                </value>
                <value>
                    <fullName>ItemSubtotal</fullName>
                </value>
                <value>
                    <fullName>ItemDiscount</fullName>
                </value>
                <value>
                    <fullName>ItemPayment</fullName>
                </value>
                <value>
                    <fullName>ItemGroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <description>QuickBooks Id</description>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Terms__c</fullName>
        <label>Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cart_Discount__c</fullName>
        <label>Cart Discount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissioned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Coupon__c</fullName>
        <label>Discount/Coupon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPending__c</fullName>
        <label>IsPending</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QBJurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Invoice__c</fullName>
        <label>Invoice #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stripe_Fees__c</fullName>
        <label>Stripe Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total Amount minus  Discount/Coupon and Stripe Fees.</description>
        <formula>Amount -  Stripe_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WC_Order__c</fullName>
        <label>WC Order #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WISAFI_External_Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>WISAFI External Transaction ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WooCommerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WooCommerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Woo_Rep__c</fullName>
        <label>Woo Rep</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>CSL_Paid_Invoiced_Items</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Invoice__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>AVSFQB__Products_Count__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Stripe_Fees__c</columns>
        <columns>Discount_Coupon__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>WISAFI_External_Transaction_ID__c</columns>
        <columns>AVSFQB__Quickbooks_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pending,Processing</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Financial</value>
        </filters>
        <label>CSL _ Paid Invoiced Items</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Contact_Email__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Financial</fullName>
        <active>true</active>
        <businessProcess>Financial</businessProcess>
        <label>Financial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>